--- a/src/Sharpen.VisualStudioExtension/ReleaseNotes.html
+++ b/src/Sharpen.VisualStudioExtension/ReleaseNotes.html
@@ -4,9 +4,21 @@
 
 <p>The format of the file is based on <a href="http://keepachangelog.com/en/1.0.0/">Keep a Changelog</a>.</p>
 
-<h2 id="01120171121">[0.1.1] - 2017-11-21</h2>
+<h2 id="02020171214">[0.2.0] - 2017-12-14</h2>
 
 <h3 id="added">Added</h3>
+
+<ul>
+    <li>"Use default expression in optional constructor parameters" suggestion.</li>
+
+    <li>"Use default expression in optional method parameters" suggestion.</li>
+
+    <li>"Use default expression in return statements" suggestion.</li>
+</ul>
+
+<h2 id="01120171121">[0.1.1] - 2017-11-21</h2>
+
+<h3 id="added-1">Added</h3>
 
 <ul>
     <li>Icon, preview image and release notes.</li>
@@ -14,7 +26,7 @@
 
 <h2 id="01020171121">[0.1.0] - 2017-11-21</h2>
 
-<h3 id="added-1">Added</h3>
+<h3 id="added-2">Added</h3>
 
 <ul>
     <li>Grouping the results by C# Version > Suggestion > &lt;Project&gt;\File.</li>
